--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <title>Halloumidürümconnection</title>
   </head>
   <body>
-    <h1>Countdown bis Silas Linas Wohnung inspizieren kann<span>*</span></h1>
+    <h1>
+      Countdown bis Silas endlich Linas Wohnung inspizieren kann<span>*</span>
+    </h1>
     <main>
-      <p id="delay"></p>
       <p id="countdown"></p>
+      <p id="delay"></p>
       <script src="main.js"></script>
     </main>
   </body>
