--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/index.css" />
     <title>Halloumidürümconnection</title>
   </head>
-  <body>
+  <!--   <body>
     <h1>
       Countdown bis Silas endlich Linas Wohnung inspizieren kann<span>*</span>
     </h1>
@@ -16,5 +16,5 @@
       <p id="delay"></p>
       <script src="main.js"></script>
     </main>
-  </body>
+  </body> -->
 </html>
